<resources>
    <string name="app_name">BillSplit</string>
    <string name="billsplit">BillSplit</string>
    <string name="calculate">Calculate</string>
    <string name="total_per_person">Total Per Person</string>
    <string name="reset">Reset</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="number_of_people">Number of people</string>
    <string name="settings">Settings</string>
    <string name="include_tip">Include Tip</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="_25">25%</string>
    <string name="done">Done</string>
    <string name="per_person"> per person</string>
    <string name="settings_icon">Settings Icon</string>
</resources>