<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BillSplitMainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billsplit"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="9dp"
            android:onClick="settingsClicked"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/settings_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_bill_amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/numberOfPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_people"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="36sp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculateButtonClicked"
        android:text="@string/calculate"
        android:textSize="36sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetButtonClicked"
        android:text="@string/reset"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/total_per_person"
        android:textSize="36sp" />


</androidx.appcompat.widget.LinearLayoutCompat>